--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -12,6 +12,17 @@
 		2px 0 4px -2px rgba(0, 0, 0, 0.03),
 		inset -1px 0 0 rgba(255, 255, 255, 0.1);
 	padding: 16px 0;
+	position: fixed;
+	left: -100%;
+	top: env(safe-area-inset-top);
+	width: 280px;
+	height: calc(
+		100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom)
+	) !important;
+	background: var(--bg-white);
+	transition: left 0.3s ease;
+	z-index: 1002;
+	padding-bottom: env(safe-area-inset-bottom);
 }
 
 .stewardlogo {
@@ -57,6 +68,8 @@
 	backdrop-filter: blur(8px);
 	margin: 0;
 	padding: 0;
+	position: absolute;
+	bottom: max(1%, env(safe-area-inset-bottom));
 }
 
 .userInfo .avatar {
@@ -137,6 +150,7 @@
 		justify-content: space-between;
 		align-items: center;
 		height: 100%;
+		padding-top: env(safe-area-inset-top);
 	}
 
 	.mobileMenuBtn {
